Added a few comments of my name (Mathew Anderson)

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # Team Name: TBD
-# Mathew Anderson-Saavedra n01436706
+# Mathew Anderson-Saavedra n01436706 Section RCA
 
 # Created by https://www.toptal.com/developers/gitignore/api/androidstudio
 # Edit at https://www.toptal.com/developers/gitignore?templates=androidstudio
