--- a/TbdModule/src/main/AndroidManifest.xml
+++ b/TbdModule/src/main/AndroidManifest.xml
@@ -14,6 +14,10 @@
         tools:targetApi="34">
         <activity
             android:name=".MainActivity"
+            android:exported="false" />
+        <activity
+            android:name=".SplashActivity"
+            android:theme="@style/SplashTheme"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
