added names and student number to the gitnore

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
 # Team Name: TBD
+#Nicole Chlea Manaoat N01565017
+#Medi Muamba Nzambi N01320883
+#Safah Virk N01596470
 # Mathew Anderson-Saavedra n01436706 Section RCA
 
 # Created by https://www.toptal.com/developers/gitignore/api/androidstudio
