-Changed Login from a Fragment to an Activity -Fixed Bug where a default fragment would not show in RoomSettingsFragment

--- a/TbdModule/src/main/AndroidManifest.xml
+++ b/TbdModule/src/main/AndroidManifest.xml
@@ -13,12 +13,15 @@
         android:theme="@style/Theme.SmartLibraryStudyRoomManagementAndComfortSystem"
         tools:targetApi="34">
         <activity
+            android:name=".LoginActivity"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="false" />
         <activity
             android:name=".SplashActivity"
-            android:theme="@style/SplashTheme"
-            android:exported="true">
+            android:exported="true"
+            android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
