added a sign up button on login screen which leadss to registartion activity

--- a/TbdModule/src/main/AndroidManifest.xml
+++ b/TbdModule/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SmartLibraryStudyRoomManagementAndComfortSystem"
         tools:targetApi="34">
+
         <activity
             android:name=".LoginActivity"
             android:exported="false" />
@@ -19,12 +20,14 @@
             android:name=".MainActivity"
             android:exported="false" />
         <activity
+            android:name=".RegistrationActivity"
+            android:exported="true" />
+        <activity
             android:name=".SplashActivity"
             android:exported="true"
             android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
