-Added svg vector file and new vector assets. -Added new fragment links in the options menu -Added settings screen -Implementing Night Mode in settings screen. -Adding Vector assets and implementing notifications setting. -New Vector files added. -Font size functionality added in settings screen. -Completed settings screen design and starting Implementations -Implemented dial run time permission in settings screen. -Feedback in settings now takes us to feedback screen. -Back button implementation -Updated background colors in all screens for better screen flow. -Location runtime permission implemented. -Room settings implementation continued. -Modifying menu items layout. -Removed call option from settings screen. -Complications with menu item background. -Moving room settings implementations to one screen. -Updated the room settings screen so Lighting, Temperature and Time are tracked in one screen. -Room settings design -Removing unused screens -Updated settings screen and removed phone call implementation. -LoginActivity Test implemented and commented out to avoid app crash.

--- a/TbdModule/build.gradle
+++ b/TbdModule/build.gradle
@@ -27,6 +27,12 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
+    testOptions {
+        unitTests {
+            includeAndroidResources = true // Include Android resources for Robolectric
+        }
+    }
 }
 
 dependencies {
@@ -40,8 +46,20 @@ dependencies {
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
 
-    // Import the Firebase BoM
+    // Robolectric for Android unit tests
+    testImplementation 'org.robolectric:robolectric:4.10.3'
+    // AndroidX Test Core for Robolectric support
+    testImplementation 'androidx.test:core:1.5.0'
+
+    // JUnit 4 for unit testing
+    testImplementation 'junit:junit:4.13.2'
+
+    // Mockito Core for mocking
+    testImplementation 'org.mockito:mockito-core:4.8.0'
+    // Optional: Mockito Inline for final classes and methods
+    testImplementation 'org.mockito:mockito-inline:4.8.0'
+
+    // Firebase BoM
     implementation platform('com.google.firebase:firebase-bom:33.5.1')
-    // Add Firebase Analytics (and other Firebase products you may want to use)
     implementation 'com.google.firebase:firebase-analytics'
 }
