--- a/TbdModule/build.gradle
+++ b/TbdModule/build.gradle
@@ -61,5 +61,7 @@ dependencies {
 
     // Firebase BoM
     implementation platform('com.google.firebase:firebase-bom:33.5.1')
+    implementation("com.google.firebase:firebase-auth")
+    implementation("com.google.android.gms:play-services-auth:21.2.0")
     implementation 'com.google.firebase:firebase-analytics'
 }
