--- a/TbdModule/build.gradle
+++ b/TbdModule/build.gradle
@@ -51,13 +51,13 @@ dependencies {
     // AndroidX Test Core for Robolectric support
     testImplementation 'androidx.test:core:1.5.0'
 
-    // JUnit 4 for unit testing
-    testImplementation 'junit:junit:4.13.2'
+    // For Mockito on Android
+    androidTestImplementation 'org.mockito:mockito-android:5.5.0'
 
-    // Mockito Core for mocking
-    testImplementation 'org.mockito:mockito-core:4.8.0'
-    // Optional: Mockito Inline for final classes and methods
-    testImplementation 'org.mockito:mockito-inline:4.8.0'
+    // For AndroidX Test framework
+    androidTestImplementation 'androidx.test:core:1.5.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
     // Firebase BoM
     implementation platform('com.google.firebase:firebase-bom:33.5.1')
