--- a/TbdModule/build.gradle
+++ b/TbdModule/build.gradle
@@ -63,5 +63,9 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:33.5.1')
     implementation("com.google.firebase:firebase-auth")
     implementation("com.google.android.gms:play-services-auth:21.2.0")
+    implementation("androidx.credentials:credentials:1.2.2")
+    //implementation("androidx.credentials:credentials-services-auth:1.2.2")
+    implementation("com.google.android.libraries.identity.googleid:googleid:1.1.1")
     implementation 'com.google.firebase:firebase-analytics'
+    implementation 'com.github.bumptech.glide:glide:4.16.0'
 }
