--- a/TbdModule/build.gradle
+++ b/TbdModule/build.gradle
@@ -59,6 +59,7 @@ dependencies {
 
     // Glide
     implementation 'com.github.bumptech.glide:glide:4.15.1'
+    implementation libs.firebase.database
 
     // Test libraries
     testImplementation 'org.robolectric:robolectric:4.10.3'
